src/css/ResultsScreen.css
#overlay-screen {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  z-index: 999;
  font-family: var(--font-primary);
}

.back-box {
  position: absolute;
  top: 25%;
  left: 0;
  width: 100%;
  height: 75%;
  background-color: var(--uvx-secondary);
}

.middle-section {
  display: flex;
  justify-content: center;
  align-items: flex-end;
  width: 100%;
  height: 100%;
  z-index: 1000;
}

.left-box,
.right-box,
.center-box {
  margin-bottom: 1%;
}

.left-box,
.right-box {
  width: 26%;
  height: 65%;
}

.left-box {
  width: 26%;
  height: 65%;
  background-color: var(--uvx-secondary);
  padding: 20px;
  border-radius: 10px;
  display: flex;
  flex-direction: column;
}

.achievements {
  width: 100%;
}

.achievements-title {
  font-size: 1.5rem;
  color: white;
  margin-bottom: 20px;
}

.achievement {
  display: flex;
  align-items: center;
  background-color: rgba(255, 255, 255, 0.1);
  border-radius: 10px;
  padding: 10px;
  margin-bottom: 15px;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
}

.achievement.completed {
  background-color: rgba(255, 255, 255, 0.3);
}

.achievement-icon {
  width: 30px;
  height: 30px;
  margin-right: 15px;
}

.achievement-info {
  display: flex;
  flex-direction: column;
}

.achievement-title {
  font-size: 1.2rem;
  color: white;
}

.achievement-description {
  font-size: 0.9rem;
  color: lightgray;
}

.achievement:not(.completed) {
  opacity: 0.5;
}

.center-box {
  width: 45%;
  height: 85%;
  background-color: var(--uvx-primary);
  border-radius: 5%;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
  padding: 0;
}

.center-box-header {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 20px;
  margin-bottom: 2%;
  position: relative;
  height: 20%;
}

.person-silhouette {
  max-width: 100%;
  max-height: 80%;
  object-fit: contain;
  opacity: 0.8;
}

.header-medal {
  width: 25%;
  height: auto;
  object-fit: contain;
  top: 20%;
  left: 4%;
  background-color: var(--uvx-secondary);
  border-radius: 30px;
  margin-top: 15%;
}

.header-title {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 3rem;
  width: 30%;
  color: white;
  text-align: center;
  background-color: var(--uvx-secondary);
  border-radius: 30px;
  padding: 2% 5%;
}

.header-score {
  font-size: 2.25rem;
  font-weight: 600;
  color: white;
  text-align: right;
  width: 25%;
}

.header-score span {
  font-weight: bold;
}

.data-point {
  position: absolute;
  width: 120px;
  padding: 10px;
  border-radius: 10%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.data-title {
  display: flex;
  min-width: max-content;
  align-items: center;
  text-align: center;
  font-size: 1.35rem;
  color: white;
  margin-bottom: 10px;
}

.data-title img {
  width: 18px;
  height: 18px;
  margin-right: 8px;
}

.data-value {
  font-size: 1.75rem;
  color: var(--uvx-results-foreground);
  padding: 20px 60px;
  border-radius: 8px;
}

.left-shoulder {
  top: 35%;
  left: 35%;
}

.right-shoulder {
  top: 35%;
  right: 35%;
}

.left-wrist {
  top: 65%;
  left: 32%;
}

.right-wrist {
  top: 65%;
  right: 32%;
}

.footer-box {
  display: flex;
  width: 100%;
  height: 10vh;
  background-color: var(--uvx-secondary);
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0 10%;
  padding-bottom: 1%;
  z-index: 1000;
}

.footer-button {
  background-color: #fff;
  color: #333;
  padding: 1rem 2rem;
  border: none;
  cursor: pointer;
  font-size: 1rem;
}

.footer-logo {
  height: 60px;
  margin: 0 auto;
}

/* 1024 */
@media (max-width: 1024px) {
  .left-box,
  .right-box {
    width: 28%;
    height: 60%;
  }

  .center-box {
    width: 40%;
    height: 80%;
  }

  .footer-button {
    font-size: 0.75rem;
    padding: 0.8rem 1.5rem;
  }
}

/* 768 */
@media (max-width: 768px) {
  .left-box,
  .right-box {
    width: 30%;
    height: 55%;
  }

  .center-box {
    width: 35%;
    height: 75%;
  }

  .footer-box {
    padding: 0 5%;
  }

  .footer-button {
    font-size: 0.85rem;
    padding: 0.7rem 1.2rem;
  }

  .footer-logo {
    height: 50px;
  }
}

.chart-container {
  display: flex;
  justify-content: center;
  align-items: flex-end;
  column-gap: 2rem;
  width: auto;
  height: 512px;
  margin: 2rem 1rem;
  overflow: hidden;
  transition: all 0.5s;
}
.bar {
  width: 50px;
  background-color: var(--uvx-primary);
  text-align: center;
  color: white;
  border-radius: 15px;
  font-size: 1.5rem;
  font-weight: bold;
}

.ac-container {
  display: flex;
  justify-content: left;
  align-items: center;
  padding: 1rem;
}

.achievement-container {
  display: flex;
  flex-direction: column;
}

.achievement-container::before {
  content: 'ACHIEVEMENTS';
  position: absolute;
  margin-top: -4rem;
  margin-left: -2%;
  font-size: var(--font-medium);
  font-weight: var(--fw-medium);
  font-style: italic;
  text-shadow: 3px 3px 6px black;
}

#achievement-item {
  display: flex;
  gap: 25px;
  color: white;
  font-size: 1.5rem;
}

#achievement-item input[type='checkbox'] {
  transform: scale(2);
}

.achievement-content {
  display: flex;
  flex-direction: column;
}

.achievement-title {
  font-weight: var(--fw-medium);
  font-style: italic;
}

.achievement-description {
  color: rgb(214, 207, 207);
  font-size: 1rem;
}

.chart-btmn {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 2rem;
  margin-right: 3rem;
}

.chart-ctnr {
  display: flex;
  justify-content: center;
  align-items: center;
}

.chart-ctnr-title {
  font-size: 1rem;
  color: white;
  font-weight: var(--fw-medium);
  transform: rotate(-35deg);
}

